--- a/Views/studentProfile.html
+++ b/Views/studentProfile.html
@@ -191,9 +191,9 @@
 
 
     <div class="row" style="margin-top: 5% ; margin-left: 30%">
-       <input id="accpt" style="width:60% ; margin-top: 5% ;"  name="accpt" value="Edit" class="btn btn-success btn-lg"  >
+       <button id="accpt" style="width:60% ; margin-top: 5% ;" onclick="edit()"  name="accpt" value="Edit" class="btn btn-success btn-lg"  > Edit </button>
 
-      <input  id="rjct"  style="width:60% ; margin-top: 5% ;" name="rjct" value="Delete"  class="btn btn-danger btn-lg" >
+      <button id="rjct"  style="width:60% ; margin-top: 5% ;" onclick="remove()" name="rjct" value="Delete"  class="btn btn-danger btn-lg" > Delete</button>
       
     </div>
 </div>
