--- a/Views/Styles/studentProfile.css
+++ b/Views/Styles/studentProfile.css
@@ -419,3 +419,7 @@ select option {
 
 .tital{ font-size:16px; font-weight:500; color:black;}
    .bot-border{ border-bottom:1px #d9d9d9 solid;  margin:5px 0  5px 0}  
+
+   .close{
+float: right !important;
+   }
