--- a/Views/studentProfile.html
+++ b/Views/studentProfile.html
@@ -23,6 +23,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
   <link rel="stylesheet" href="/Styles/studentProfile.css">
   <script type="text/javascript" src="/Script/studentprofile.js"></script> 
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -193,9 +194,39 @@
     <div class="row" style="margin-top: 5% ; margin-left: 30%">
        <button id="accpt" style="width:60% ; margin-top: 5% ;" onclick="edit()"  name="accpt" value="Edit" class="btn btn-success btn-lg"  > Edit </button>
 
-      <button id="rjct"  style="width:60% ; margin-top: 5% ;" onclick="remove()" name="rjct" value="Delete"  class="btn btn-danger btn-lg" > Delete</button>
+      <button id="rjct"  style="width:60% ; margin-top: 5% ;" onclick="remove()" name="rjct" value="Delete"  class="btn btn-danger btn-lg" data-toggle="modal" data-target="#myModal"> Delete</button>
       
     </div>
+
+    <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Confirm Deletion</h4>
+                    
+
+           
+
+        </div>
+        <div class="modal-body">
+          <p style="color:black">Do you want to delete this student?</p>
+        </div>
+        
+          <button id="confrm" style="width: 40% ;margin-bottom: 5% ;margin-left: 10%"  class="btn btn-danger btn-lg" >DELETE</button>
+          <button id="cancel" style=" width :40% ; margin-bottom: 5%"  class="btn btn-success btn-lg" data-dismiss="modal">Cancel</button>
+
+        
+      </div>
+      
+    </div>
+    </div>
+
+
+
 </div>
 
 
