--- a/Views/studentProfile.html
+++ b/Views/studentProfile.html
@@ -87,11 +87,11 @@
     </div>
 
       <div class="row" >
-      <div class="col-sm-5 col-xs-6 tital " >Student's Name:</div><div class="col-sm-7 col-xs-6 " name="stdname" id="stdname" style="color: #666666">Sumaiya Afroz Mila</div>
+      <div class="col-sm-5 col-xs-6 tital ">Student's Name:</div><div class="col-sm-7 col-xs-6 " name="stdname" id="stdname" style="color: #666666"><i class="fa fa-spinner fa-spin fa-2x"></i></div>
       <div class="clearfix"></div>
       <div class="bot-border"></div>
 
-      <div class="col-sm-5 col-xs-6 tital " >Student's Phone:</div><div class="col-sm-7 col-xs-6" style="color: #666666" id="stdphn"> 01711111111</div>
+      <div class="col-sm-5 col-xs-6 tital " >Student's Phone:</div><div class="col-sm-7 col-xs-6" style="color: #666666" id="stdphn"> <i class="fa fa-spinner fa-spin fa-2x"></i> </div>
        <div class="clearfix"></div>
         <div class="bot-border"></div>
 
@@ -194,7 +194,7 @@
     <div class="row" style="margin-top: 5% ; margin-left: 30%">
        <button id="accpt" style="width:60% ; margin-top: 5% ;" onclick="edit()"  name="accpt" value="Edit" class="btn btn-success btn-lg"  > Edit </button>
 
-      <button id="rjct"  style="width:60% ; margin-top: 5% ;" onclick="remove()" name="rjct" value="Delete"  class="btn btn-danger btn-lg" data-toggle="modal" data-target="#myModal"> Delete</button>
+      <button id="rjct"  style="width:60% ; margin-top: 5% ;"  name="rjct" value="Delete"  class="btn btn-danger btn-lg" data-toggle="modal" data-target="#myModal"> Delete</button>
       
     </div>
 
@@ -207,16 +207,13 @@
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
           <h4 class="modal-title">Confirm Deletion</h4>
-                    
-
-           
-
+                
         </div>
         <div class="modal-body">
           <p style="color:black">Do you want to delete this student?</p>
         </div>
         
-          <button id="confrm" style="width: 40% ;margin-bottom: 5% ;margin-left: 10%"  class="btn btn-danger btn-lg" >DELETE</button>
+          <button id="confrm" onclick="remove()" style="width: 40% ;margin-bottom: 5% ;margin-left: 10%"  class="btn btn-danger btn-lg" >DELETE</button>
           <button id="cancel" style=" width :40% ; margin-bottom: 5%"  class="btn btn-success btn-lg" data-dismiss="modal">Cancel</button>
 
         
