--- a/Views/ansar.html
+++ b/Views/ansar.html
@@ -102,6 +102,9 @@
       <p class="big"> Current Status : <span id="in-out">IN</span> </p>
       <p class="big"> <span id="btnsts"> Exit </span> Date : <span id="date">1/1/11 2:11</span>  <span id="hehe"> &nbsp; Exit</span>  Time : <span id="time">12:30 </span></p>
 
+      <input type="checkbox" name="nightstay" value="nightstay">  <font size="4">NightStay</font><br>
+      Approximate Return Date: <input type="date" name="return">
+
 
     </div>
     <div class="modal-footer">
