--- a/Views/Styles/ansar.css
+++ b/Views/Styles/ansar.css
@@ -63,7 +63,7 @@ div.example input[type=text] {
     float: left;
     width: 80%;
     background: #f1f1f1;
-    margin-top: 200px;
+    margin-top: 25%;
 
 }
 
@@ -77,7 +77,7 @@ div.example button {
     border: 1px solid grey;
     border-left: none;
     cursor: pointer;
-     margin-top: 200px;
+     margin-top: 25%;
 
 }
 
