--- a/Views/blacklist.html
+++ b/Views/blacklist.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-<title>Merge Table</title>
-<link href="/Styles/mergeTable.css" rel="stylesheet"/>
+<title>Black List</title>
+<link href="/Styles/blacklist.css" rel="stylesheet"/>
 
 <style>
 	body{
@@ -98,10 +98,8 @@
 					<th>Room No</th>
 					<th>Hall</th>
 					<th>Gender</th>
-					<th>Exit Time</th>
-					<th>Entry Time</th>
-					<th>Date</th>
-					<th>Late Status</th>
+					<th>Delay(in days)</th>
+					<th>Contact(parent)</th>
 					
 					
 				</tr>
@@ -116,8 +114,8 @@
 					<td>female</td>
 					<td>7:00pm</td>
 					<td>8:00pm</td>
-					<td>2 jan 2017</td>
-					<td>not late</td>
+					<td>01711111111</td>
+					
 
 
 				</tr>
