--- a/Views/first page.html
+++ b/Views/first page.html
@@ -21,7 +21,7 @@
     <!-- ################################################################################################ -->
     <ul  style="background-color: #00897b;">
       
-        <li style="background-color: #00897b;" ><a href="" style="background-color: #00897b;">Entry List</a></li>
+        <li style="background-color: #00897b;" ><a href="/entrylist" style="background-color: #00897b;">Entry List</a></li>
         <li style="background-color: #00897b;"><a href="/guestform" style="background-color: #00897b;" >Guest Form</a> </li> 
         <li style="background-color: #00897b;"><a href="/approvedguest" style="background-color: #00897b;" >Approved Guests</a> </li>  
         <li style="background-color: #00897b;"><a href="/contact" style="background-color: #00897b;">Contact</a> </li>   
