--- a/Views/ansar.html
+++ b/Views/ansar.html
@@ -27,6 +27,7 @@
 
      <script src="/Script/toast.js"></script> 
   <link rel="stylesheet" href="/Styles/toast.css">
+  <script type="text/javascript" src="/Script/loggedin.js"></script>
 
 </head>
 <body background="bbb.jpg" style="background-size: cover;background-repeat: no-repeat;background-attachment: fixed;">
