--- a/Views/contact.html
+++ b/Views/contact.html
@@ -22,6 +22,7 @@
 
 
   <link rel="stylesheet" href="/Styles/contact.css">
+  <script type="text/javascript" src="/Script/home.js"></script>
 
 </head>
 
@@ -35,7 +36,7 @@
         <li><a  href="/" id="entry" style="color: white">Entry List</a></li>
          <li><a href="/guestform" id="cntct" style="color: white">Guest Form</a></li>
         <li><a href="/approvedguest" id="cntct" style="color: white">Approved Guests</a></li>
-        <li><a class="right" href="/auth" id="login" style="color:white"><span class="glyphicon glyphicon-log-in" style="color:white"></span> Log In</a></li>
+        <li><a class="right" href="/auth"  style="color:white"><span class="glyphicon glyphicon-log-in" style="color:white"></span> <span id="login"> Log In </span></a></li>
     </ul>
   
 
