--- a/Views/first page.html
+++ b/Views/first page.html
@@ -9,7 +9,8 @@
 <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
  <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet" type="text/css">
-
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+<script type="text/javascript" src="/Script/home.js"></script>
 </head>
 <body id="top">
 <!-- ################################################################################################ -->
@@ -26,7 +27,7 @@
         <li style="background-color: #00897b;"><a href="/approvedguest" style="background-color: #00897b;" >Approved Guests</a> </li>  
         <li style="background-color: #00897b;"><a href="/contact" style="background-color: #00897b;">Contact</a> </li>   
        
-       <li style="background-color: #00897b;" ><a href="login" title="Login" style="background-color: #00897b; ">Login <i class="fa fa-lg fa-sign-in" style="background-color: #00897b;"></i></a></li>
+       <li style="background-color: #00897b;" ><a href="/login" title="Login" style="background-color: #00897b; "><span id="login">Login</span> <i class="fa fa-lg fa-sign-in" style="background-color: #00897b;"></i></a></li>
    </ul>
     
     <!-- ################################################################################################ -->
