--- a/Views/mergeTable.html
+++ b/Views/mergeTable.html
@@ -7,6 +7,7 @@
 
 <title>Merge Table</title>
 <link href="/Styles/mergeTable.css" rel="stylesheet"/>
+<link rel="stylesheet" type="text/css" href="/Styles/loading.css">
 
 <style>
 	body{
@@ -145,6 +146,7 @@
 	
 </div>
 
+<h3 data-text="Loading..."> Loading...</h3>
 
 <script type="text/javascript">
   $( document ).ready(function() {
