--- a/Views/blacklist.html
+++ b/Views/blacklist.html
@@ -7,6 +7,7 @@
 
 <title>Black List</title>
 <link href="/Styles/blacklist.css" rel="stylesheet"/>
+<link rel="stylesheet" type="text/css" href="/Styles/loading.css">
 
 <style>
 	body{
@@ -143,6 +144,7 @@
 				
 			</tbody>
 		</table>
+		<h3 data-text="Loading..."> Loading...</h3>
 	
 </div>
 
