--- a/Views/guestForm.html
+++ b/Views/guestForm.html
@@ -37,7 +37,7 @@
         <li><a  href="/" id="entry" style="color: white">Entry List</a></li>
         <li><a  href="/approvedguest" id="apprvd" style="color: white">Approved Guests</a></li>
          <li><a href="/contact" id="cntct" style="color: white">Contact</a></li>
-        <li><a class="right" href="/auth" id="login" style="color:white"><span class="glyphicon glyphicon-log-in" style="color:white"></span> Log In</a></li>
+      <!--   <li><a class="right" href="/auth" id="login" style="color:white"><span class="glyphicon glyphicon-log-in" style="color:white"></span> Log In</a></li> -->
     </ul>
   
 
