--- a/Views/report.html
+++ b/Views/report.html
@@ -7,6 +7,7 @@
 
 <title>Report</title>
 <link href="/Styles/report.css" rel="stylesheet"/>
+<link rel="stylesheet" type="text/css" href="/Styles/loading.css">
 
 <style>
 	body{
@@ -142,6 +143,7 @@
 				
 			</tbody>
 		</table>
+		<h3 data-text="Loading...">Loading...<h3> 
 	
 </div>
 
