--- a/Views/ansar.html
+++ b/Views/ansar.html
@@ -124,7 +124,7 @@
 <div class="w3-display-container">
   <div class="w3-display-topmiddle">
   <button class="button" id="entry" ><span>Entry List</span></button>
-  <button class="button" id="gg"><span> Guest </span></button><!--ekhane kibhabe dekhbe-->
+  <a href="/guests"><button class="button" id="gg"><span> Guest </span></button></a> <!--ekhane kibhabe dekhbe-->
 
 </div>
 </div>
