--- a/Views/guestProfile.html
+++ b/Views/guestProfile.html
@@ -85,6 +85,7 @@
       <img src="logo.png" style="width: 20% ; margin-left: 40%">
 
       <h4 style = "text-align:center ;margin-bottom: 15% "><font size="6">Pending Guest Request</font></h4>
+      <div id="lala"> 
 
       <div class="col-sm-5 col-xs-6 tital " >Student's Name:</div><div class="col-sm-7 col-xs-6 " name="stdname" id="stdname" style="color: #666666">Sumaiya Afroz Mila</div>
       <div class="clearfix"></div>
@@ -146,17 +147,14 @@
        <div class="clearfix"></div>
         <div class="bot-border"></div>
 
-    </div>
 
 
 
     <div class="row" style="margin-top: 5% ; margin-left: 30%">
        <input id="accpt" style="width:60% ; margin-top: 5% ;" onclick="approve(1)" name="accpt" value="Approve" class="btn btn-success btn-lg"  >
-
-        <input id="stll" style="width:60% ; margin-top: 5% ;"  name="stll" value="Stall" class="btn btn-primary btn-lg"  >
-
       <input  id="rjct"  style="width:60% ; margin-top: 5% ;" name="rjct" value="Reject" onclick="approve(0)" class="btn btn-danger btn-lg" >
       
+    </div>
     </div>
 </div>
 
