--- a/Views/contact.html
+++ b/Views/contact.html
@@ -17,7 +17,7 @@
 
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 
 
@@ -44,7 +44,7 @@
     
       <div id="navbar" class="navbar-collapse collapse">
          <div class="hidden-xs navbar-form navbar-right">
-            <a href="#search" class="search-form-tigger btn btn-success"  data-toggle="search-form" style="background-color: white"><i class="fa fa-search" style="color:#00897b" aria-hidden="true"></i></a>
+            <a href="#search" class="search-form-tigger btn btn-success"   data-toggle="search-form" style="background-color: white"><i class="fa fa-search" style="color:#00897b" aria-hidden="true"></i></a>
          </div>
      <div class="visible-xs navbar-form navbar-right" style="border-color:transparent;">
             <input type="text" name="search" class="search form-control" placeholder="Search..." style="color: blue;">
@@ -58,7 +58,7 @@
 </nav>
 
 <div class="search-form-wrapper">
-   <form class="search-form" id="" action="">
+   <div class="search-form" id="" action="">
       <div class="input-group">
          <input type="text" name="search" class="search form-control" placeholder="Search...">
          <span class="input-group-addon" id="basic-addon2"><i class="fa fa-search" aria-hidden="true"></i>
@@ -66,7 +66,7 @@
          <span class="input-group-addon search-close" id="basic-addon2"><i class="fa fa-window-close" aria-hidden="true"></i>
          </span>
       </div>
-   </form>
+   </div>
 </div>
    
 
@@ -106,23 +106,28 @@
 
 <script type="text/javascript">
   $( document ).ready(function() {
-  $('[data-toggle=search-form]').click(function() {
-      $('.search-form-wrapper').toggleClass('open');
-      $('.search-form-wrapper .search').focus();
-      $('html').toggleClass('search-form-open');
-    });
+    $('[data-toggle=search-form]').click(function() {
+        $('.search-form-wrapper').toggleClass('open');
+        $('.search-form-wrapper .search').focus();
+        $('html').toggleClass('search-form-open');
+      });
+    
     $('[data-toggle=search-form-close]').click(function() {
+        $('.search-form-wrapper').removeClass('open');
+        $('html').removeClass('search-form-open');
+      });
+    
+    $('.search-form-wrapper .search').keypress(function( event ) {
+        if(event.keyCode==13){
+          
+          window.location.href = "/search?value="+ $(this).val();
+        }
+    });
+
+    $('.search-close').click(function(event) {
       $('.search-form-wrapper').removeClass('open');
       $('html').removeClass('search-form-open');
     });
-  $('.search-form-wrapper .search').keypress(function( event ) {
-    if($(this).val() == "Search") $(this).val("");
-  });
-
-  $('.search-close').click(function(event) {
-    $('.search-form-wrapper').removeClass('open');
-    $('html').removeClass('search-form-open');
-  });
 });
 </script>
 
