--- a/Views/report.html
+++ b/Views/report.html
@@ -73,7 +73,7 @@
 
 
 <div class="search-form-wrapper">
-   <form class="search-form" id="" action="">
+   <div class="search-form">
       <div class="input-group">
          <input type="text" name="search" class="search form-control" placeholder="Search">
          <span class="input-group-addon" id="basic-addon2"><i class="fa fa-search" aria-hidden="true"></i>
@@ -81,7 +81,7 @@
          <span class="input-group-addon search-close" id="basic-addon2"><i class="fa fa-window-close" aria-hidden="true"></i>
          </span>
       </div>
-   </form>
+   </div>
 </div>
    
 
@@ -150,23 +150,28 @@
 
 <script type="text/javascript">
   $( document ).ready(function() {
-  $('[data-toggle=search-form]').click(function() {
-      $('.search-form-wrapper').toggleClass('open');
-      $('.search-form-wrapper .search').focus();
-      $('html').toggleClass('search-form-open');
-    });
+    $('[data-toggle=search-form]').click(function() {
+        $('.search-form-wrapper').toggleClass('open');
+        $('.search-form-wrapper .search').focus();
+        $('html').toggleClass('search-form-open');
+      });
+    
     $('[data-toggle=search-form-close]').click(function() {
+        $('.search-form-wrapper').removeClass('open');
+        $('html').removeClass('search-form-open');
+      });
+    
+    $('.search-form-wrapper .search').keypress(function( event ) {
+        if(event.keyCode==13){
+          
+          window.location.href = "/search?value="+ $(this).val();
+        }
+    });
+
+    $('.search-close').click(function(event) {
       $('.search-form-wrapper').removeClass('open');
       $('html').removeClass('search-form-open');
     });
-  $('.search-form-wrapper .search').keypress(function( event ) {
-    if($(this).val() == "Search") $(this).val("");
-  });
-
-  $('.search-close').click(function(event) {
-    $('.search-form-wrapper').removeClass('open');
-    $('html').removeClass('search-form-open');
-  });
 });
 </script>
 
