--- a/Views/Styles/passwordreset.css
+++ b/Views/Styles/passwordreset.css
@@ -1,14 +1,29 @@
 .FORM {
     border: 3px solid #15bf86;
-	background: #333;
-	margin-top:100px;
+    background: white;
+    margin-top:10%;
 
 }
 
+.search-form-wrapper {
+    display: none;
+    position: absolute;
+    left: 0;
+    right: 0;
+    padding: 20px 15px;
+    margin-top: -2%;
+    //background: url(/resources/images/misc/bg_search-open.png) right center no-repeat #f89d1c;
+}
+.search-form-wrapper.open {
+    display: block;
+}
+
+
 body{
-			background-image: url("new6.jpg");
-            background-size: cover;
-            background-attachment: fixed;
+        
+        background-size: cover;
+        background-attachment: fixed;
+        
 }
 
 
@@ -24,12 +39,13 @@ input[type=text], input[type=password] {
 button {
     background-color: #15bf86;
     color: white;
-	border-radius:50px;
+    border-radius:50px;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
     cursor: pointer;
     width: 100%;
+    outline: none;
 }
 
 /* eita dile button er upor cursor rakhle light color hoy */
@@ -76,113 +92,20 @@ span.psw {
 }
 
 
-ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-    }
-    /* Add a black background color to the top navigation */
-    .topnav {
-        background-color: #333;
-        overflow: hidden;
-    }
+   .container-fluid ul li a:hover{
+   // background: black;
+    color:#0645AD !important;
+
+}
 
 
-    /* Style the links inside the navigation bar */
-    .topnav a {
-        float: left;
+@media screen and (max-width: 800px) {
+    #navbar{
+      border-color: #00897b;
+        float:none;
         display: block;
-        color: #f2f2f2;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
+    }
+   
 
-    }
-
-
-
-    /* Hide the link that should open and close the topnav on small screens */
-    .topnav .icon {
-        display: none;
-    }
-    .topnav .current-menu-item a::before,
-    .topnav .current_page_item a::before {
-        content: "";
-        position: absolute;
-        z-index: 2;
-        left: 0;
-        right: 0;
-    }
-    .topnav li a:hover{
-        border-bottom: 2px solid #15bf86;
-        -webkit-transition-property: right;
-        transition-property: right;
-        -webkit-transition-duration: 0.3s;
-        transition-duration: 0.3s;
-        -webkit-transition-timing-function: ease-out;
-        transition-timing-function: ease-out;
-    }
-    .topnav li a:hover {
-        opacity: 1 !important;
-    }
-    .topnav li a:hover:before {
-        right: 0;
-    }
-    .topnav  li li a:before {
-        bottom: 10%;
-    }
-
-    .topnav ul li a:hover:{
-        border-bottom: 2px solid red;
-    }
-    
-    
-    .right{
-        float: right !important;
-        display: block !important;
-        color: #f2f2f2;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
-
-
-    }
-    topnav .serch:focus{
-        width : 30%;
-        background : white;
-    }
-    
-    .white{
-        color: white !important;
-    }
-    .search{
-         background: #ededed url(https://static.tumblr.com/ftv85bp/MIXmud4tx/search-icon.png) no-repeat  center;
-        margin-top : 0.5%;
-        margin-right : 1%;
-        border: solid 1px;
-        border-radius : 50%;
-        width : 1px;
-        height : 1px;
-        cursor : pointer;
-        transition: all .5s;
-        background-color : inherit;
-        color : inherit;
-    }
-    .search:focus{
-        background : none;
-        width: 200px;
-        border-radius : 20%;
-        background-color: white;
-        border-color: white;
-        font-size : 20px;;
-        -webkit-border-radius: 10em;
-        -moz-border-radius: 10em;
-        background-color : white;
-        cursor : auto ;
-        border-width : 3px;
-        color : black;
-        outline : none;
-    }
-     
+   
+}
