--- a/Views/Styles/resetcode.css
+++ b/Views/Styles/resetcode.css
@@ -1,13 +1,29 @@
 .FORM {
-    border: 3px solid forestgreen;
-    background:white;
-    margin-top:70px;
+    border: 3px solid #15bf86;
+    background: white;
+    margin-top:10%;
+
 }
 
+.search-form-wrapper {
+    display: none;
+    position: absolute;
+    left: 0;
+    right: 0;
+    padding: 20px 15px;
+    margin-top: -2%;
+    //background: url(/resources/images/misc/bg_search-open.png) right center no-repeat #f89d1c;
+}
+.search-form-wrapper.open {
+    display: block;
+}
+
+
 body{
-            background-image: url("back2.jpg");
-            background-size: cover;
-            background-attachment: fixed;
+        
+        background-size: cover;
+        background-attachment: fixed;
+        
 }
 
 
@@ -16,19 +32,20 @@ input[type=text], input[type=password] {
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
-    border: 1px solid forestgreen;
+    border: 1px solid #15bf86;
     box-sizing: border-box;
 }
 
 button {
-    background-color: forestgreen;
+    background-color: #15bf86;
     color: white;
-    //border-radius:50px;
+    border-radius:50px;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
     cursor: pointer;
     width: 100%;
+    outline: none;
 }
 
 /* eita dile button er upor cursor rakhle light color hoy */
@@ -36,6 +53,11 @@ button:hover {
     opacity: 0.8;
 }
 
+.cancelbtn {
+    width: auto;
+    padding: 10px 18px;
+    background-color: #f44336;
+}
 
 /* image take majhkhane anlam */
 .imgcontainer {
@@ -58,29 +80,32 @@ span.psw {
     padding-top: 16px;
 }
 
-
-
-.topnav {
-    background-color: #00004d;
-    overflow: hidden;
-}
-.topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    margin-left: .2%;
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+    span.psw {
+        display: block;
+        float: none;
+    }
+    .cancelbtn {
+        width: 100%;
+    }
 }
 
-.topnav a:hover {
-    background-color: #ddd;
-    color: black;
+
+   .container-fluid ul li a:hover{
+   // background: black;
+    color:#0645AD !important;
+
 }
 
-/* Add a color to the active/current link */
-.topnav a.active {
-    background-color: #00b3b3;
-    color: white;
+
+@media screen and (max-width: 800px) {
+    #navbar{
+      border-color: #00897b;
+        float:none;
+        display: block;
+    }
+   
+
+   
 }
