--- a/Views/passwordreset.html
+++ b/Views/passwordreset.html
@@ -1,64 +1,83 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Reset Password</title>
 
-  <link rel="stylesheet" href="/Styles/bootstrap.min.css">
-  <!-- <script src="Script/signin.js"></script> -->
-  <!-- <link rel="stylesheet" href="Styles/signin.css"> -->
+  
   <link rel="stylesheet" type="text/css" href="/Styles/passwordreset.css">
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
   <link rel="stylesheet" href="/Styles/toast.css">
   <script src="/Script/toast.js"></script>
   <script type="text/javascript" src="/Script/passwordreset.js"></script>
+
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+
+  <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 </head>
-<body>
+<body background="bbb.jpg">
 
 <!-- <div class="topnav">
 
    <a class="active" href="/" id="home">Home</a>
    
 </div>
+
  -->
- <div class="topnav" id="top-menu">
-  <!-- <img src="logo.png" class= "pic" alt=""  style="margin-top: 1% ; margin-left:5%; " height="60" width="63" > -->
-    <ul>
 
-      <li><a href="/" id="home">Home</a></li>
-       <li><a  href="/residentstudent" id="entry">Entry List</a></li>
-       <!-- <li><a href="/login" id="login">Log In</a></li> -->
-       <li><a href="/login" id="gst">Guest Form</a></li>
-       <li><a href="/contact" id="cntct">Contact</a></li>
-       <li><input href="#" class="right search" data-toggle="dropdown" placeholder="Enter Student ID"></input></li>
-     </ul>
+<nav class="navbar navbar-inverse " style="background-color:#00897b;color: white ;border-color: #00897b" id="navbar">
+ <div class="container-fluid">
+    
+    <ul class="nav navbar-nav">
+        <li><a  href="/" id="home" style="color: white">Home</a></li>
+        <li><a  href="/" id="entry" style="color: white">Entry List</a></li>
+         <li><a  href="/guestform" id="gstfrm" style="color: white">Guest Form</a></li>
+                  <li><a  href="/approvedguest" id="apprvd" style="color: white">Approved Guests</a></li>
+         <li><a href="/contact" id="cntct" style="color: white">Contact</a></li>
+        
+    </ul> 
 
-</div>
+    
+     
+  </div>
+
+  
+</nav>
+
+<div class="w3-display-container">
+<div class="w3-display-topmiddle">
 
 
-</div>
-
-
-<div class="container" style="width:350px">
+<div class="container" style="width:400px;">
   <div class="FORM" >
-    <h1 style="font-size: 100% ;color: white ;font-weight: bold; margin-left: 35% ; margin-top: 5%">Reset Password</h1>
+  <div class="imgcontainer">
+    <img src="logo.png" alt="Avatar" class="avatar">
+  </div>
 
-    <div class="imgcontainer">
-       <img src="logo.png" alt="Avatar" class="avatar">
-    </div>
-
-  <div class="container">
-    <label for="uname" style="color:#15bf86"><b>Email</b></label>
+  <div class="input-group" style="margin-left: 5% ; margin-right: 5%">
+    <label for="uname" style="color:#00897b;margin-top: 15%"><b>Email</b></label>
     <input type="text" placeholder="Enter Email ID" name="uname" id="usrname" required>
 
 
-    <button  id="reset" onclick="reset()">Reset Password</button>  
+    <button  id="reset" style="color:white;margin-top: 3;" onclick="reset()">Reset Password</button>
   </div>
 
-            <h2 style="font-size: 100% ;  margin-left: 35% ; margin-bottom: 5%; margin-top: 1%">Back to <a href="/login">Login</a></h2>
-
+  <div class="input-group" style="background-color:#f1f1f1 ;width: 100%;margin-top: 10% ;">
+    <h2 style="font-size: 100% ;  margin-left: 35% ; margin-bottom: 5%; margin-top: 1%">Back to <a href="/login">Login</a></h2>
+  </div>
+  
+</div>
+</div>
 
 </div>
 </div>
+
+
 </body>
 </html>
