--- a/Views/auth.html
+++ b/Views/auth.html
@@ -55,13 +55,12 @@
 </nav>
 
 <div class="search-form-wrapper">
-   <div class="search-form">
+   <div class="search-form" id="" action="">
       <div class="input-group">
          <input type="text" name="search" class="search form-control" placeholder="Search...">
          <span class="input-group-addon" id="basic-addon2"><i class="fa fa-search" aria-hidden="true"></i>
          </span>
-         <span class="input-group-addon search-close" id="basic-addon2"><i class="fa fa-window-close" aria-hidden="true"></i>
-         </span>
+         
       </div>
    </div>
 </div>
