--- a/Views/manager.html
+++ b/Views/manager.html
@@ -22,6 +22,7 @@
     <script src="/Script/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/Styles/provost.css">
     <script type="text/javascript" src="/Script/logout.js" ></script>
+    <script type="text/javascript" src="/Script/loggedin.js"></script>
 
 </head>
 <body background="new6.jpg">
