--- a/Views/provost.html
+++ b/Views/provost.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" type="text/css" href="/Styles/provost.css">
     <script type="text/javascript" src="/Script/logout.js" ></script>
     <script type="text/javascript" src="/Script/provost.js"></script>
+    <script type="text/javascript" src="/Script/loggedin.js"></script>
 
 </head>
 <body background="bbb.jpg">
