--- a/Views/studentSearch.html
+++ b/Views/studentSearch.html
@@ -70,7 +70,7 @@
 
 
 <div class="search-form-wrapper">
-   <form class="search-form" id="" action="">
+   <div class="search-form" id="" action="">
       <div class="input-group">
          <input type="text" name="search" class="search form-control" placeholder="Search">
          <span class="input-group-addon" id="basic-addon2"><i class="fa fa-search" aria-hidden="true"></i>
@@ -78,25 +78,19 @@
          <span class="input-group-addon search-close" id="basic-addon2"><i class="fa fa-window-close" aria-hidden="true"></i>
          </span>
       </div>
-   </form>
+   </div>
 </div>
    
-<div class="w3-display-container">
-<div class="w3-display-topmiddle">
 
-<div style="background-color:#00897b;color: white ;border-color: #00897b;margin-top: -1%;width: 300px;">
   
-  <h1 style="text-align: center;color: white;"><font size="6" id="name">Sumaiya Afroz Mila</font> </h1>
-  <h1 style="text-align: center;color: white;"><font size="4" id="id">201514021</font></h1>
-</div>
-</div>
-</div>
+  <h1 style="text-align: center;color: black;"><font size="7" id="name">Sumaiya Afroz Mila</font> </h1>
+  <h1 style="text-align: center;color: black;"><font size="5" id="id">201514021</font></h1>
+
 
    
-<div class="w3-display-container">
-<div class="w3-display-topmiddle">
 
-<div id="tableContainer" style="margin-left: 7%; margin-right: 3%; margin-top: 50%; padding-bottom: 100px" >
+
+<div id="tableContainer" style="margin-left: 7%; margin-right: 3%; margin-top: 5%; padding-bottom: 100px" >
  
 
     <table class = "tableDesign">
@@ -120,8 +114,6 @@
       
     </table>
   
-</div>
-</div>
 </div>
 
 
