--- a/Views/guest.html
+++ b/Views/guest.html
@@ -97,7 +97,7 @@
 					<th>Student ID</th>
 				  <th>Level</th>
 			    <th>Entry Date</th>
-          <th>Eeturn Date</th>
+          <th>Return Date</th>
 					<th>Status</th>					
 					
 				</tr>
