--- a/Views/report.html
+++ b/Views/report.html
@@ -99,7 +99,7 @@
 					<th>Student ID</th>
 					<th>Room No</th>
 					<th>Hall</th>
-					<th>Extected Return Date</th>
+					<th>Expected Return Date</th>
 					<th>Entry Date</th>
 					<th>Entry Time</th>
 					
