--- a/Views/ansar.html
+++ b/Views/ansar.html
@@ -123,7 +123,7 @@
 
 <div class="w3-display-container">
   <div class="w3-display-topmiddle">
-  <button class="button" id="entry" ><span>Entry List</span></button>
+  <a href="/entrylist"><button class="button" id="entry" ><span>Entry List</span></button>
   <a href="/guests"><button class="button" id="gg"><span> Guest </span></button></a> <!--ekhane kibhabe dekhbe-->
 
 </div>
