--- a/Views/mergeTable.html
+++ b/Views/mergeTable.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-<title>Merge Table</title>
+<!-- merge table -->
+<title>Entry List</title>
 <link href="/Styles/mergeTable.css" rel="stylesheet"/>
 <link rel="stylesheet" type="text/css" href="/Styles/loading.css">
 
@@ -77,7 +77,7 @@
          <input type="text" name="search" class="search form-control" placeholder="Search">
          <span class="input-group-addon" id="basic-addon2"><i class="fa fa-search" aria-hidden="true"></i>
          </span>
-         <span class="input-group-addon search-close" id="basic-addon2"><i class="fa fa-window-close" aria-hidden="true"></i>
+         <!-- <span class="input-group-addon search-close" id="basic-addon2"><i class="fa fa-window-close" aria-hidden="true"></i> -->
          </span>
       </div>
    </div>
