--- a/Views/application.html
+++ b/Views/application.html
@@ -30,7 +30,7 @@
 
 </head>
 
-<body background="bbb.jpg">
+<body background="bbb.jpg" style="background-attachment: fixed;background-size: cover;background-repeat: no-repeat;">
 
 <nav class="navbar navbar-inverse " style="background-color:#00897b;color: white ;border-color: #00897b" id="navbar">
  <div class="container-fluid">
@@ -66,8 +66,8 @@
          <input type="text" name="search" class="search form-control" placeholder="Search">
          <span class="input-group-addon" id="basic-addon2"><i class="fa fa-search" aria-hidden="true"></i>
          </span>
-         <span class="input-group-addon search-close" id="basic-addon2"><i class="fa fa-window-close" aria-hidden="true"></i>
-         </span>
+         <!-- <span class="input-group-addon search-close" id="basic-addon2"><i class="fa fa-window-close" aria-hidden="true"></i>
+         </span> -->
       </div>
    </div>
 </div>
