--- a/Views/studentSearch.html
+++ b/Views/studentSearch.html
@@ -75,8 +75,8 @@
          <input type="text" name="search" class="search form-control" placeholder="Search">
          <span class="input-group-addon" id="basic-addon2"><i class="fa fa-search" aria-hidden="true"></i>
          </span>
-         <span class="input-group-addon search-close" id="basic-addon2"><i class="fa fa-window-close" aria-hidden="true"></i>
-         </span>
+         <!-- <span class="input-group-addon search-close" id="basic-addon2"><i class="fa fa-window-close" aria-hidden="true"></i>
+         </span> -->
       </div>
    </div>
 </div>
