--- a/Views/guestForm.html
+++ b/Views/guestForm.html
@@ -34,7 +34,7 @@
     
     <ul class="nav navbar-nav">
         <li><a  href="/" id="home" style="color: white">Home</a></li>
-        <li><a  href="/" id="entry" style="color: white">Entry List</a></li>
+        <li><a  href="/entrylist" id="entry" style="color: white">Entry List</a></li>
         <li><a  href="/approvedguest" id="apprvd" style="color: white">Approved Guests</a></li>
          <li><a href="/contact" id="cntct" style="color: white">Contact</a></li>
       <!--   <li><a class="right" href="/auth" id="login" style="color:white"><span class="glyphicon glyphicon-log-in" style="color:white"></span> Log In</a></li> -->
@@ -64,8 +64,8 @@
          <input type="text" name="search" class="search form-control" placeholder="Search...">
          <span class="input-group-addon" id="basic-addon2"><i class="fa fa-search" aria-hidden="true"></i>
          </span>
-         <span class="input-group-addon search-close" id="basic-addon2"><i class="fa fa-window-close" aria-hidden="true"></i>
-         </span>
+         <!-- <span class="input-group-addon search-close" id="basic-addon2"><i class="fa fa-window-close" aria-hidden="true"></i>
+         </span> -->
       </div>
    </div>
 </div>
