--- a/Views/manager.html
+++ b/Views/manager.html
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="/Script/loggedin.js"></script>
 
 </head>
-<body background="new6.jpg">
+<body background="new6.jpg" style="background-attachment: fixed;background-size: cover;background-repeat: no-repeat;">
 
 
 <nav class="navbar navbar-inverse " style="background-color:#00897b;color: white ;border-color: #00897b" id="navbar">
@@ -65,8 +65,8 @@
          <input type="text" name="search" class="search form-control" placeholder="Search...">
          <span class="input-group-addon" id="basic-addon2"><i class="fa fa-search" aria-hidden="true"></i>
          </span>
-         <span class="input-group-addon search-close" id="basic-addon2"><i class="fa fa-window-close" aria-hidden="true"></i>
-         </span>
+         <!-- <span class="input-group-addon search-close" id="basic-addon2"><i class="fa fa-window-close" aria-hidden="true"></i>
+         </span> -->
       </div>
    </div>
 </div>
