--- a/Views/studentProfile.html
+++ b/Views/studentProfile.html
@@ -29,6 +29,18 @@
 <body>
 
 
+<div id ="loading" >
+    <div class="w3-container">
+
+        <div class="w3-display-middle">
+            <div class="loader"></div>
+        </div>
+
+    </div>
+
+</div>
+
+
 
 <nav class="navbar navbar-inverse " style="background-color:#00897b;color: white ;border-color: #00897b" id="navbar">
  <div class="container-fluid">
@@ -70,6 +82,8 @@
    </div>
 </div>
   
+<div id="maindiv">
+
 <div class="container" style=" margin-top: 5% ; margin-bottom: 10%">
     <div class="row" >
 
@@ -224,6 +238,7 @@
 
 
 
+</div>
 </div>
 
 
