--- a/Views/table.html
+++ b/Views/table.html
@@ -7,7 +7,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-<title>Table</title>
+<title>Resident Students</title>
 
 
     <script  src="/Script/jquery.min.js"></script>
@@ -31,11 +31,12 @@
 	<link href="/Styles/table.css" rel="stylesheet"/>
 
 	 <script type="text/javascript" src="/Script/logout.js" ></script>
+	 <link rel="stylesheet" type="text/css" href="/Styles/loading.css">
 </head>
 
 
 
-<body background="new6.jpg">
+<body background="new6.jpg" style="background-attachment: fixed;background-size: cover;background-repeat: no-repeat;">
 
 	
 	
@@ -75,8 +76,8 @@
          <input type="text" name="search" class="search form-control" placeholder="Search">
          <span class="input-group-addon" id="basic-addon2"><i class="fa fa-search" aria-hidden="true"></i>
          </span>
-         <span class="input-group-addon search-close" id="basic-addon2"><i class="fa fa-window-close" aria-hidden="true"></i>
-         </span>
+         <!-- <span class="input-group-addon search-close" id="basic-addon2"><i class="fa fa-window-close" aria-hidden="true"></i>
+         </span> -->
       </div>
    </div>
 </div>
@@ -87,6 +88,7 @@
   
 
    
+	
 
 
 <div id="tableContainer" style="margin-left: 7%; margin-right: 3%; margin-top: 75px; padding-bottom: 100px" >
@@ -168,6 +170,7 @@
 			</tbody>
 		</table>
 	
+			<h3 data-text="Loading...">Loading...<h3> 
 </div>
 
 
