--- a/Views/mergeTable.html
+++ b/Views/mergeTable.html
@@ -106,7 +106,7 @@
 					<th>Gender</th>
 					<th>Exit Time</th>
 					<th>Exit Date</th>
-					<th>Entry Date</th>
+					<th>Return Date</th>
 					
 				</tr>
 			</thead>
