--- a/Views/provost.html
+++ b/Views/provost.html
@@ -22,11 +22,14 @@
     <script type="text/javascript" src="/Script/provost.js"></script>
     <script type="text/javascript" src="/Script/loggedin.js"></script>
 
+    <script src="/Script/toast.js"></script> 
+  <link rel="stylesheet" href="/Styles/toast.css">
+
     <script type="text/javascript" src="/Script/logout.js" ></script>
   <script type="text/javascript" src="/Script/home.js"></script>
 
 </head>
-<body background="bbb.jpg">
+<body background="bbb.jpg" style="background-repeat: no-repeat;background-size: cover;background-attachment: fixed;">
 
 
 <nav class="navbar navbar-inverse " style="background-color:#00897b;color: white ;border-color: #00897b" id="navbar">
