--- a/Views/manager.html
+++ b/Views/manager.html
@@ -34,6 +34,8 @@
     
     <ul class="nav navbar-nav">
         <li><a  href="/" id="home" style="color: white">Home</a></li>
+        <li><a  href="/entrylist" id="entry" style="color: white">Entry List</a></li>
+        
         <li><a  href="/approvedguest" id="apprvd" style="color: white">Approved Guests</a></li>
         <li><a href="/application" style="color: white"> Add New Stuednts </a></li>
 <!--          <li style="background-color: #00897b;" ><a href="/login" title="Login" style="background-color: #00897b;color:white; "><span id="login">Login</span> <i class="fa fa-lg fa-sign-in" style="background-color: #00897b;"></i></a></li> -->
