--- a/Views/contact.html
+++ b/Views/contact.html
@@ -34,7 +34,7 @@
     
     <ul class="nav navbar-nav">
         <li><a  href="/" id="home" style="color: white">Home</a></li>
-        <li><a  href="/" id="entry" style="color: white">Entry List</a></li>
+        <li><a  href="/entrylist" id="entry" style="color: white">Entry List</a></li>
          <li><a href="/guestform" id="cntct" style="color: white">Guest Form</a></li>
         <li><a href="/approvedguest" id="cntct" style="color: white">Approved Guests</a></li>
          <li style="background-color: #00897b;" ><a href="/login" title="Login" style="background-color: #00897b;color:white; "><span id="login">Login</span> <i class="fa fa-lg fa-sign-in" style="background-color: #00897b;"></i></a></li>
