--- a/Views/guestForm.html
+++ b/Views/guestForm.html
@@ -136,8 +136,18 @@
       </div> -->
 
       <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
-                    <input type="number" placeholder="Level"  name="level" id="level" required="">
-        <div class="input-icon"><i class="fa fa-bookmark " style="color: #00897b"></i></div>
+                    <!-- <input type="number" placeholder="Level"  name="level" id="level" required="">
+        <div class="input-icon"><i class="fa fa-bookmark " style="color: #00897b"></i></div> -->
+        <select class="matha" name="level"  style="width: 100%; color:#707b7c" required>
+            <option value="" disabled selected>Select Level</option>
+            <option value="1">1</option> <!-- -_- eivabe -->
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="Ex Student">Ex Student</option>
+          
+        </select>
+
       </div>
 
       <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
