--- a/Views/login.html
+++ b/Views/login.html
@@ -41,7 +41,7 @@
     
     <ul class="nav navbar-nav">
         <li><a  href="/" id="home" style="color: white">Home</a></li>
-        <li><a  href="/" id="entry" style="color: white">Entry List</a></li>
+        <li><a  href="/entrylist" id="entry" style="color: white">Entry List</a></li>
          <li><a  href="/guestform" id="gstfrm" style="color: white">Guest Form</a></li>
                   <li><a  href="/approvedguest" id="apprvd" style="color: white">Approved Guests</a></li>
          <li><a href="/contact" id="cntct" style="color: white">Contact</a></li>
