--- a/Views/ansar.html
+++ b/Views/ansar.html
@@ -41,11 +41,11 @@
     
     <ul class="nav navbar-nav">
         <li><a  href="/" id="home" style="color: white">Home</a></li>
-        <li><a  href="/" id="entry" style="color: white">Entry List</a></li>
+        <!-- <li><a  href="/entrylist" id="entry" style="color: white">Entry List</a></li> -->
          <li><a  href="/guestform" id="gstfrm" style="color: white">Guest Form</a></li>
            <li><a  href="/approvedguest" id="apprvd" style="color: white">Approved Guests</a></li>
-
-           <li style="background-color: #00897b;" ><a href="/login" title="Login" style="background-color: #00897b;color:white; "><span id="login">Login</span> <i class="fa fa-lg fa-sign-in" style="background-color: #00897b;"></i></a></li>
+<!-- 
+           <li style="background-color: #00897b;" ><a href="/login" title="Login" style="background-color: #00897b;color:white; "><span id="login">Login</span> <i class="fa fa-lg fa-sign-in" style="background-color: #00897b;"></i></a></li> -->
            <li><a href="#" onclick="logout()" id="logout" class="float-right fa fa-power-off" style="color: white;"></a></li>
            
         
