--- a/Views/application.html
+++ b/Views/application.html
@@ -181,8 +181,20 @@
       </div>
 
       <div class="input-group input-group-icon" style="width: 100%;color:   #1b2631">
-                    <input type="number" placeholder="Level" name="level" required>
+        <!--             <input type="number" placeholder="Level" name="level" required>
         <div class="input-icon"><i class="fa fa-bookmark " style="color: #00897b"></i></div>
+      
+         -->  
+         <select class="matha" name="level"  style="width: 100%; color:#707b7c" required>
+            <option value="" disabled selected>Select Level</option>
+            <option value="1">1</option> <!-- -_- eivabe -->
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+           
+          
+        </select>
+
       </div>
 
     </div>
