--- a/Views/manager.html
+++ b/Views/manager.html
@@ -36,7 +36,7 @@
         <li><a  href="/" id="home" style="color: white">Home</a></li>
         <li><a  href="/approvedguest" id="apprvd" style="color: white">Approved Guests</a></li>
         <li><a href="/application" style="color: white"> Add New Stuednts </a></li>
-         <li style="background-color: #00897b;" ><a href="/login" title="Login" style="background-color: #00897b;color:white; "><span id="login">Login</span> <i class="fa fa-lg fa-sign-in" style="background-color: #00897b;"></i></a></li>
+<!--          <li style="background-color: #00897b;" ><a href="/login" title="Login" style="background-color: #00897b;color:white; "><span id="login">Login</span> <i class="fa fa-lg fa-sign-in" style="background-color: #00897b;"></i></a></li> -->
            <li><a href="#" onclick="logout()" id="logout" class="float-right fa fa-power-off" style="color: white;"></a></li>
 
 
