--- a/Views/contact.html
+++ b/Views/contact.html
@@ -22,6 +22,7 @@
 
 
   <link rel="stylesheet" href="/Styles/contact.css">
+  <script type="text/javascript" src="/Script/logout.js" ></script>
   <script type="text/javascript" src="/Script/home.js"></script>
 
 </head>
@@ -36,7 +37,8 @@
         <li><a  href="/" id="entry" style="color: white">Entry List</a></li>
          <li><a href="/guestform" id="cntct" style="color: white">Guest Form</a></li>
         <li><a href="/approvedguest" id="cntct" style="color: white">Approved Guests</a></li>
-        <li><a class="right" href="/auth"  style="color:white"><span class="glyphicon glyphicon-log-in" style="color:white"></span> <span id="login"> Log In </span></a></li>
+         <li style="background-color: #00897b;" ><a href="/login" title="Login" style="background-color: #00897b;color:white; "><span id="login">Login</span> <i class="fa fa-lg fa-sign-in" style="background-color: #00897b;"></i></a></li>
+           <li><a href="#" onclick="logout()" id="logout" class="float-right fa fa-power-off" style="color: white;"></a></li>
     </ul>
   
 
