--- a/Views/guest.html
+++ b/Views/guest.html
@@ -29,6 +29,8 @@
   <script type="text/javascript" src="/Script/guests.js"></script>
   <script type="text/javascript" src="/Script/home.js"></script>
   <link rel="stylesheet" type="text/css" href="/Styles/loading.css">
+   <script type="text/javascript" src="/Script/logout.js" ></script>
+  <script type="text/javascript" src="/Script/home.js"></script>
 
 </head>
 
@@ -47,6 +49,8 @@
 
          <li><a href="/contact" id="cntct" style="color: white">Contact</a></li>
         <li><a class="right" href="/auth"  style="color:white"><i class="glyphicon glyphicon-log-in " style="color:white"></i> <span id="login">LogIn </a></li>
+          
+           <li><a href="#" onclick="logout()" id="logout" class="float-right fa fa-power-off" style="color: white;"></a></li>
     </ul>
   
 
