--- a/Views/guestProfile.html
+++ b/Views/guestProfile.html
@@ -24,6 +24,9 @@
   <link rel="stylesheet" href="/Styles/guestProfile.css">
   <script type="text/javascript" src="/Script/guestprofile.js"></script>
 
+  <script type="text/javascript" src="/Script/logout.js" ></script>
+  <script type="text/javascript" src="/Script/home.js"></script>
+
 </head>
 
 <body>
@@ -47,6 +50,9 @@
         <li><a  href="/" id="home" style="color: white">Home</a></li>
         <li><a  href="/" id="entry" style="color: white">Entry List</a></li>
         <li><a  href="/approvedguest" id="apprvd" style="color: white">Approved Guests</a></li>
+
+         <li style="background-color: #00897b;" ><a href="/login" title="Login" style="background-color: #00897b;color:white; "><span id="login">Login</span> <i class="fa fa-lg fa-sign-in" style="background-color: #00897b;"></i></a></li>
+           <li><a href="#" onclick="logout()" id="logout" class="float-right fa fa-power-off" style="color: white;"></a></li>
     </ul>
   
 
