--- a/Views/guestTable.html
+++ b/Views/guestTable.html
@@ -8,6 +8,9 @@
     <script src="/Script/bootstrap.min.js"></script>
 	<link href="/Styles/guestTable.css" rel="stylesheet"/>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+
+	<script type="text/javascript" src="/Script/logout.js" ></script>
+  <script type="text/javascript" src="/Script/home.js"></script>
 	
 
 </head>
