--- a/Views/ansar.html
+++ b/Views/ansar.html
@@ -29,6 +29,9 @@
   <link rel="stylesheet" href="/Styles/toast.css">
   <script type="text/javascript" src="/Script/loggedin.js"></script>
 
+  <script type="text/javascript" src="/Script/logout.js" ></script>
+  <script type="text/javascript" src="/Script/home.js"></script>
+
 </head>
 <body background="bbb.jpg" style="background-size: cover;background-repeat: no-repeat;background-attachment: fixed;">
 
@@ -41,8 +44,10 @@
         <li><a  href="/" id="entry" style="color: white">Entry List</a></li>
          <li><a  href="/guestform" id="gstfrm" style="color: white">Guest Form</a></li>
            <li><a  href="/approvedguest" id="apprvd" style="color: white">Approved Guests</a></li>
-           <li><a href="#" onclick="logout()" id="logout" class="float-right fa fa-power-off" style="color: white;"></a></li>
 
+           <li style="background-color: #00897b;" ><a href="/login" title="Login" style="background-color: #00897b;color:white; "><span id="login">Login</span> <i class="fa fa-lg fa-sign-in" style="background-color: #00897b;"></i></a></li>
+           <li><a href="#" onclick="logout()" id="logout" class="float-right fa fa-power-off" style="color: white;"></a></li>
+           
         
     </ul> 
 
