--- a/Views/approvedGuest.html
+++ b/Views/approvedGuest.html
@@ -30,6 +30,9 @@
   <script type="text/javascript" src="/Script/home.js"></script>
   <link rel="stylesheet" type="text/css" href="/Styles/loading.css">
 
+  <script type="text/javascript" src="/Script/logout.js" ></script>
+  <script type="text/javascript" src="/Script/home.js"></script>
+
 </head>
 
 
@@ -42,11 +45,14 @@
     
     <ul class="nav navbar-nav">
         <li><a  href="/" id="home" style="color: white">Home</a></li>
-        <li><a  href="/" id="entry" style="color: white">Entry List</a></li>
+        <li><a  href="/entrylist" id="entry" style="color: white">Entry List</a></li>
                  <li><a  href="/guestform" id="gstfrm" style="color: white">Guest Form</a></li>
 
          <li><a href="/contact" id="cntct" style="color: white">Contact</a></li>
-        <li><a class="right" href="/auth"  style="color:white"><i class="glyphicon glyphicon-log-in " style="color:white"></i> <span id="login">LogIn </a></li>
+        
+
+         <li style="background-color: #00897b;" ><a href="/login" title="Login" style="background-color: #00897b;color:white; "><span id="login">Login</span> <i class="fa fa-lg fa-sign-in" style="background-color: #00897b;"></i></a></li>
+           <li><a href="#" onclick="logout()" id="logout" class="float-right fa fa-power-off" style="color: white;"></a></li>
     </ul>
   
 
