--- a/Views/auth.html
+++ b/Views/auth.html
@@ -20,6 +20,8 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 
   <link rel="stylesheet" type="text/css" href="/Styles/auth.css">
+  <script type="text/javascript" src="/Script/logout.js" ></script>
+  <script type="text/javascript" src="/Script/home.js"></script>
 
 
 </head>
@@ -35,6 +37,9 @@
          <li><a  href="/guestform" id="gstfrm" style="color: white">Guest Form</a></li>
                   <li><a  href="/approvedguest" id="apprvd" style="color: white">Approved Guests</a></li>
          <li><a href="/contact" id="cntct" style="color: white">Contact</a></li>
+
+          <li style="background-color: #00897b;" ><a href="/login" title="Login" style="background-color: #00897b;color:white; "><span id="login">Login</span> <i class="fa fa-lg fa-sign-in" style="background-color: #00897b;"></i></a></li>
+           <li><a href="#" onclick="logout()" id="logout" class="float-right fa fa-power-off" style="color: white;"></a></li>
         
     </ul> 
 
