--- a/Views/blacklist.html
+++ b/Views/blacklist.html
@@ -38,6 +38,10 @@
   <script src="/Script/bootstrap.min.js"></script>
   <script type="text/javascript" src="/Script/blacklist.js"></script>
 
+  
+  <script type="text/javascript" src="/Script/logout.js" ></script>
+  <script type="text/javascript" src="/Script/home.js"></script>
+
 </head>
 <body>
 
@@ -46,9 +50,13 @@
     
     <ul class="nav navbar-nav">
         <li><a  href="/" id="home" style="color: white">Home</a></li>
+                <li><a  href="/entrylist" id="entry" style="color: white">Entry List</a></li>
+
          <li><a href="/guestform" style="color: white;" >Guest Form</a> </li> 
         <li><a  href="/approvedguest" id="apprvd" style="color: white">Approved Guests</a></li>
-         <li ><a href="/contact" style="color: white;">Contact</a> </li>   
+         <li ><a href="/contact" style="color: white;">Contact</a> </li>  
+          <li style="background-color: #00897b;" ><a href="/login" title="Login" style="background-color: #00897b;color:white; "><span id="login">Login</span> <i class="fa fa-lg fa-sign-in" style="background-color: #00897b;"></i></a></li>
+           <li><a href="#" onclick="logout()" id="logout" class="float-right fa fa-power-off" style="color: white;"></a></li> 
        
          
     </ul>
