--- a/Views/guestForm.html
+++ b/Views/guestForm.html
@@ -25,6 +25,9 @@
   <link rel="stylesheet" href="/Styles/guestForm.css">
   <script type="text/javascript" src="/Script/guestform.js"></script>
 
+  <script type="text/javascript" src="/Script/logout.js" ></script>
+  <script type="text/javascript" src="/Script/home.js"></script>
+
 </head>
 
 <body background="bbb.jpg">
@@ -37,6 +40,8 @@
         <li><a  href="/entrylist" id="entry" style="color: white">Entry List</a></li>
         <li><a  href="/approvedguest" id="apprvd" style="color: white">Approved Guests</a></li>
          <li><a href="/contact" id="cntct" style="color: white">Contact</a></li>
+         <li style="background-color: #00897b;" ><a href="/login" title="Login" style="background-color: #00897b;color:white; "><span id="login">Login</span> <i class="fa fa-lg fa-sign-in" style="background-color: #00897b;"></i></a></li>
+           <li><a href="#" onclick="logout()" id="logout" class="float-right fa fa-power-off" style="color: white;"></a></li>
       <!--   <li><a class="right" href="/auth" id="login" style="color:white"><span class="glyphicon glyphicon-log-in" style="color:white"></span> Log In</a></li> -->
     </ul>
   
