--- a/Views/provost.html
+++ b/Views/provost.html
@@ -22,6 +22,9 @@
     <script type="text/javascript" src="/Script/provost.js"></script>
     <script type="text/javascript" src="/Script/loggedin.js"></script>
 
+    <script type="text/javascript" src="/Script/logout.js" ></script>
+  <script type="text/javascript" src="/Script/home.js"></script>
+
 </head>
 <body background="bbb.jpg">
 
@@ -31,8 +34,12 @@
     
     <ul class="nav navbar-nav">
         <li><a  href="/" id="home" style="color: white">Home</a></li>
+                <li><a  href="/entrylist" id="entry" style="color: white">Entry List</a></li>
         <li><a  href="/approvedguest" id="apprvd" style="color: white">Approved Guests</a></li>
-          <li><a href="#" onclick="logout()" id="logout" class="float-right fa fa-power-off" style="color: white;"></a></li>
+         <li ><a href="/contact" style="color: white;">Contact</a> </li>   
+          
+           <li style="background-color: #00897b;" ><a href="/login" title="Login" style="background-color: #00897b;color:white; "><span id="login">Login</span> <i class="fa fa-lg fa-sign-in" style="background-color: #00897b;"></i></a></li>
+           <li><a href="#" onclick="logout()" id="logout" class="float-right fa fa-power-off" style="color: white;"></a></li>
          
     </ul>
   
