--- a/Views/studentProfile.html
+++ b/Views/studentProfile.html
@@ -24,6 +24,9 @@
   <link rel="stylesheet" href="/Styles/studentProfile.css">
   <script type="text/javascript" src="/Script/studentprofile.js"></script> 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+  <script type="text/javascript" src="/Script/logout.js" ></script>
+  <script type="text/javascript" src="/Script/home.js"></script>
 </head>
 
 <body>
@@ -50,6 +53,8 @@
         <li><a  href="/" id="entry" style="color: white">Entry List</a></li>
        <li><a  href="/guestform" id="apprvd" style="color: white">Guest Form</a></li>
         <li><a  href="/approvedguest" id="apprvd" style="color: white">Approved Guests</a></li>
+         <li style="background-color: #00897b;" ><a href="/login" title="Login" style="background-color: #00897b;color:white; "><span id="login">Login</span> <i class="fa fa-lg fa-sign-in" style="background-color: #00897b;"></i></a></li>
+           <li><a href="#" onclick="logout()" id="logout" class="float-right fa fa-power-off" style="color: white;"></a></li>
     </ul>
   
 
